--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 
 <html>
-    <link href="style.css" rel="stylesheet" />
     <head>
+        <link href="style.css" rel="stylesheet" />
+        <meta content='width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' name='viewport' />
+        <meta name="viewport" content="width=device-width" />
     </head>
     <body style="margin: 0;">
-        <div id="container">
-        </div>
+        <div id="container"></div>
         <script type="text/javascript" src="base.js"></script>
     </body>
 </html>
