lib folder update, added weapons json
adding folder, starting to split up codebase. Weapons json for future class reference

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <link href="style.css" rel="stylesheet" />
         <meta content='width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' name='viewport' />
         <meta name="viewport" content="width=device-width" />
+        <!-- <script type="module" src="lib/weapons.js"></script> -->
+        <script type="module" src="lib/base.js"></script>
     </head>
     <body style="margin: 0;">
         <div id="container"></div>
-        <script type="text/javascript" src="base.js"></script>
     </body>
 </html>
