--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 
 <html>
     <head>
-        <link href="style.css" rel="stylesheet" />
-        <meta content='width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' name='viewport' />
-        <meta name="viewport" content="width=device-width" />
+        <link href="styles/main.css" rel="stylesheet" />
+        <link href="styles/animations.css" rel="stylesheet" />
+
+        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+        <!-- <meta name="viewport" content="width=device-width" /> -->
         <!-- <script type="module" src="lib/weapons.js"></script> -->
-        <script type="module" src="lib/base.js"></script>
+        <script type="module" src="scripts/base.js"></script>
     </head>
     <body style="margin: 0;">
         <div id="container"></div>
