huge css and html update. built in divs, nesting in containers correctly

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
         <script type="module" src="scripts/base.js"></script>
     </head>
     <body style="margin: 0;">
-        <div id="container"></div>
+        <div id="container">
+            <div id="visual-container" class="visual-container">
+                <img id="map" class="map" alt="map">
+            </div>
+            <div id="player-life-container"></div>
+            <div id="items-container">
+
+            </div>
+            <div id="puzzle-container" class="puzzle-container">
+            </div>
+        </div>
     </body>
 </html>
