initial storm tracker stuff

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>
     <body style="margin: 0;">
         <div id="container">
+            <div id="storm-tracker-container"></div>
             <div id="visual-container" class="visual-container">
                 <img id="map" class="map" alt="map">
             </div>
