adding game timer

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div id="visual-container" class="visual-container">
                 <img id="map" class="map" alt="map">
             </div>
+            <div id="match-info-container"></div>
             <div id="player-life-container"></div>
             <div id="items-container">
 
