implemented hide URL

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <!-- <meta name="viewport" content="width=device-width" /> -->
         <!-- <script type="module" src="lib/weapons.js"></script> -->
         <script type="module" src="scripts/base.js"></script>
+        <script type="module" src="scripts/hideURL.js"></script>
     </head>
     <body style="margin: 0;">
         <div id="container">
