--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
     <head>
         <link href="styles/main.css" rel="stylesheet" />
         <link href="styles/animations.css" rel="stylesheet" />
+        <link href="styles/testing.css" rel="stylesheet" />
+
 
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
         <!-- <meta name="viewport" content="width=device-width" /> -->
         <!-- <script type="module" src="lib/weapons.js"></script> -->
         <script type="module" src="scripts/base.js"></script>
         <script type="module" src="scripts/hideURL.js"></script>
+        <script type="module" src="scripts/draggable.js"></script>
+
     </head>
     <body style="margin: 0;">
         <div id="container">
+            <div id="draggable-test"></div>
             <div id="visual-container" class="visual-container">
                 <div id="storm-tracker-container"></div>
                 <img id="map" class="map" alt="map">
