dragNdrop background image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="styles/main.css" rel="stylesheet" />
         <link href="styles/animations.css" rel="stylesheet" />
-        <link href="styles/testing.css" rel="stylesheet" />
+        <!-- <link href="styles/testing.css" rel="stylesheet" /> -->
 
 
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
@@ -16,7 +16,6 @@
     </head>
     <body style="margin: 0;">
         <div id="container">
-            <div id="draggable-test"></div>
             <div id="visual-container" class="visual-container">
                 <div id="storm-tracker-container"></div>
                 <img id="map" class="map" alt="map">
