--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
             <div id="puzzle-container" class="puzzle-container">
             </div>
         </div>
+        <div id="backgroundFill"></div>
     </body>
 </html>
