--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
-
-<html>
+<html lang="en">
     <head>
-        <link href="styles/main.css" rel="stylesheet" />
-        <link href="styles/animations.css" rel="stylesheet" />
-
-        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+        <meta charset="utf-8">
+        <link href="styles/main.css" rel="stylesheet">
+        <link href="styles/animations.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script type="module" src="scripts/base.js"></script>
     </head>
-    <body style="margin: 0;">
+    <body>
         <div id="container">
             <div id="visual-container" class="visual-container">
-                <!--div id="storm-tracker-container"></div -->
-                <img id="map" class="map" alt="map">
             </div>
             <div id="match-info-container"></div>
             <div id="player-life-container"></div>
