--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <title>Match 3 Dungeon Crawler</title>
         <link href="styles/main.css" rel="stylesheet">
         <link href="styles/animations.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
